# bayesianLinearRegression

./: .buildinfo  .gitignore  README.md  api.html  bayesianLinearRegression.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  sg_execution_times.html
.doctrees/: api.doctree  bayesianLinearRegression.doctree  index.doctree  modules.doctree  sg_execution_times.doctree
.doctrees/auto_examples/: index.doctree  plot_batchBayesianLinearRegression.doctree  plot_models_evidences.doctree  plot_online_bayesian_linear_regression.doctree  plot_predictive_distribution.doctree  sg_execution_times.doctree
.github/workflows/: docs.yml
_downloads/e3b71d864b611f160e9d348aea7d0ff5/: plot_online_bayesian_linear_regression.py
_downloads/f2301ea3fcc2017ef38c096ca3e04b2c/: plot_batchBayesianLinearRegression.ipynb
_modules/: index.html
_modules/bayesianLinearRegression/: bayesianLinearRegression.html
_sources/: modules.rst.txt  sg_execution_times.rst.txt
_sources/auto_examples/: plot_models_evidences.rst.txt  plot_online_bayesian_linear_regression.rst.txt  sg_execution_times.rst.txt
auto_examples/: index.html  plot_batchBayesianLinearRegression.html  plot_models_evidences.html  plot_online_bayesian_linear_regression.html  plot_predictive_distribution.html  sg_execution_times.html
docs/: requirements.txt
docs/source/: api.rst  bayesianLinearRegression.rst  conf.py  index.rst  sg_execution_times.rst
examples/sphinx-gallery/: README.rst  plot_batchBayesianLinearRegression.py  plot_models_evidences.py  (+2 more)
(+22 files in other folders)
