[metadata]
name = BayesianLinearRegression
version = 1.0.0
description = Python implementation of Bayesian linear regression
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joacorapela/svGPFA
author = Joaquin Rapela
author_email = j.rapela@ucl.ac.uk
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.9
package_dir =
     = src
packages = find:
install_requires =

[options.packages.find]
where = src

[options.extras_require]
notebook =
docs =
